--- a/_includes/comments-providers/utterances.html
+++ b/_includes/comments-providers/utterances.html
@@ -13,7 +13,7 @@
     script.setAttribute('repo', 'KimNora07/KimNora07.github.io');
     script.setAttribute('issue-term', 'pathname');
     script.setAttribute('label', '{{ site.comments.utterances.label }}');
-    script.setAttribute('theme', 'photon-dark');
+    script.setAttribute('theme', 'dark-blue');
     script.setAttribute('crossorigin', 'anonymous');
 
     commentContainer.appendChild(script);
