--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,16 @@
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
-    {% include head.html %}
-    {% include head/custom.html %}
+    <style> 
+      ::-webkit-scrollbar{width: 14px;}
+      ::-webkit-scrollbar-track {background-color:#4b4f52; border-radius: 14px;}
+      ::-webkit-scrollbar-thumb {background-color:#5e6265; border-radius: 14px;}
+      ::-webkit-scrollbar-thumb:hover {background: #ffd24c;}
+      ::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment 
+      {
+          width:10px;height:10px;background:transparent;
+      } 
+    </style>
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
