--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
+    {% include head.html %}
+    {% include head/custom.html %}
     <style> 
       ::-webkit-scrollbar{width: 14px;}
       ::-webkit-scrollbar-track {background-color:#4b4f52; border-radius: 14px;}
